Fixed logo spacing

--- a/styles/components/nav.scss
+++ b/styles/components/nav.scss
@@ -22,7 +22,6 @@
 
             li {
                 display: inline-block;
-                //height: 3rem;
                 font-size: 16px;
 
                 a {
@@ -147,7 +146,7 @@
             height: 3rem;
             background-image: url('/icon.svg');
             background-size: contain;
-            margin-left: 0.75rem;
+            margin-left: 15px;
             -webkit-transition: all 0.3s ease;
             transition: all 0.3s ease;
 
